tests/error/errors_on_usage/while_new_var.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool) -> int:
    while x:
        y = 5
    return y
